# infra

aws_batch_event_sns_lambda/: .envrc  README.md  cron.py  pyproject.toml  template.yaml
aws_batch_event_sns_lambda/cron_fail_notify/: app.py
gcp/: requirements.txt
gcp/main/gcpFunction/: .gitmodules  README.md
gcp/main/gcpFunction/auth-espv2/: README.md  gcloud_build_image  openapi-functions.yaml
gcp/main/gcpFunction/functions/: .gcloudignore  debug.sh  deploy.sh  main.py  requirements.txt
gcp/main/gcpFunction/functions/pinder/file_module/: __init__.py  delete_file.py  insert_file.py
gcp/main/gcpFunction/functions/pinder/profile/: __init__.py  delete_profile.py  find_profile.py  insert_profile.py  update_profile.py
gcp/main/gcpFunction/functions/pinder/project/: __init__.py  create_project.py  delete_project.py  find_project.py  update_project.py  validate.py
gcp/main/gcpFunction/functions/pinder/utils/: get_config.py  http_utils.py  mongo_utils.py  utils.py
gcp/main/gcpFunction/functions/pkg/file_module/: __init__.py  delete_file.py  insert_file.py
gcp/main/gcpFunction/functions/pkg/profile/: __init__.py  delete_profile.py  find_profile.py  insert_profile.py  update_profile.py
gcp/main/gcpFunction/functions/pkg/project/: __init__.py  create_project.py  delete_project.py  find_project.py  update_project.py
gcp/main/gcpFunction/functions/test/: test_profile.sh
gcp/main/gcpFunction/functions/test_local/: test_basic_info.sh  test_profile.sh
gcp/slack/deploy/: requirements.txt  sp_budget_notifier.py
(+2 files in other folders)
